ffi/poc/cpp/corpus/include/ak_abi.h

/* ---- section 5: errors (plan.FIXED.codes) ------------------------------------- */
#define AK_OK                    0      /* success */
#define AK_ALREADY_INITIALIZED   1      /* success: ak_init called again with the same options */
#define AK_ERR_HOST              (-1)   /* the host reported through ak_fail */
#define AK_ERR_MALFORMED         (-2)   /* invalid wire */
#define AK_ERR_TRUNCATED         (-3)   /* the input ended inside a value */
#define AK_ERR_DEPTH             (-4)   /* the decode recursion limit */
#define AK_ERR_LIMIT             (-5)   /* a size limit */
#define AK_ERR_TRANSCODE         (-6)   /* the transcoder refused its input */
#define AK_ERR_CAPACITY          (-7)   /* a transcoder wrote past the capacity given */
#define AK_ERR_INVALID_STATE     (-8)   /* e.g. two concurrent recv on one call */
#define AK_ERR_PANIC             (-9)   /* a caught Rust panic */
#define AK_ERR_UNINITIALIZED     (-10)  /* ak_init was not called */
#define AK_ERR_ABI               (-11)  /* version or group-layout mismatch */
#define AK_ABI_VERSION 1u
/* ---- section 3: lifecycle flags (plan.lifecycle.flag_values) ------------------- */
#define AK_INIT_OWN_LOGGING    1u
#define AK_INIT_NO_PANIC_HOOK  2u
#define AK_INIT_NO_CRYPTO      4u
/* ABI v1 section 4: the transcoder's growth callback; may move the buffer. */
typedef int32_t (*ak_grow_fn)(void *sink, int32_t want, uint8_t * *dst, int32_t *cap);
/* Decision 11 (WP5 step 7): one message occurrence's unknown-field buffer, host memory the core copies the runs into. */
struct ak_unk_buf {
  void *data;
  uint32_t len;
  uint32_t cap;
};
typedef struct ak_unk_buf ak_unk_buf;
/* Decision 11: one message position's configuration; all zero = its unknowns are discarded. */
struct ak_unk_opts {
  struct ak_unk_buf buf;
  ak_grow_fn grow;
};
typedef struct ak_unk_opts ak_unk_opts;
/* Decision 11 rule 1: a REPEATED position's configuration: buffers taken in order, cleared in place as they are taken; `grow` the fallback. */
struct ak_unk_pool {
  struct ak_unk_buf *bufs;
  uint32_t n;
  ak_grow_fn grow;
};
typedef struct ak_unk_pool ak_unk_pool;
/* ak_init's out-parameter (ABI v1 section 3/5): a code and a detail. */
struct ak_err {
  int32_t code;
  uint32_t detail;
};
typedef struct ak_err ak_err;
/* ak_init's options (ABI v1 section 3). */
struct ak_init_opts {
  uint32_t abi_version;
  uint32_t flags;
  ak_log_fn log;
  void *log_ctx;
};
typedef struct ak_init_opts ak_init_opts;
#define AK_STR_DIRECT ((const void *)(uintptr_t)1)  /* ABI v1 section 8: ak_str.data meaning 'a direct argument of the call'. */
#define AK_TOKEN_ROOT ((int64_t)-1)  /* a token naming the root object itself */
/* Decision 11: `Empty`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_Empty_opts {
  void *host;
  struct ak_unk_opts self;  /* Empty */
};
/* Decision 11: `UploadResultData`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_UploadResultData_opts {
  void *host;
  struct ak_unk_opts self;  /* UploadResultData */
};
/* Decision 11: `MetricsBatch`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_MetricsBatch_opts {
  void *host;
  struct ak_unk_opts self;  /* MetricsBatch */
};
/* Decision 11: `Pair`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_Pair_opts {
  void *host;
  struct ak_unk_opts self;  /* Pair */
};
/* Decision 11: `ListResultsResponse`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_ListResultsResponse_opts {
  void *host;
  struct ak_unk_opts self;  /* ListResultsResponse */
  struct ak_unk_pool results;  /* ResultRaw */
  struct ak_unk_pool results_created_at;  /* Timestamp */
  struct ak_unk_pool results_completed_at;  /* Timestamp */
};
/* Decision 11: `ListTasksDetailedResponse`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_ListTasksDetailedResponse_opts {
  void *host;
  struct ak_unk_opts self;  /* ListTasksDetailedResponse */
  struct ak_unk_pool tasks;  /* TaskDetailed */
  struct ak_unk_pool tasks_options;  /* TaskOptions */
  struct ak_unk_pool tasks_options_options;  /* TaskOptionsOptionsEntry */
  struct ak_unk_pool tasks_options_max_duration;  /* Duration */
  struct ak_unk_pool tasks_created_at;  /* Timestamp */
  struct ak_unk_pool tasks_submitted_at;  /* Timestamp */
  struct ak_unk_pool tasks_started_at;  /* Timestamp */
  struct ak_unk_pool tasks_ended_at;  /* Timestamp */
  struct ak_unk_pool tasks_pod_ttl;  /* Timestamp */
  struct ak_unk_pool tasks_output;  /* TaskOutput */
  struct ak_unk_pool tasks_received_at;  /* Timestamp */
  struct ak_unk_pool tasks_acquired_at;  /* Timestamp */
  struct ak_unk_pool tasks_creation_to_end_duration;  /* Duration */
  struct ak_unk_pool tasks_processing_to_end_duration;  /* Duration */
  struct ak_unk_pool tasks_received_to_end_duration;  /* Duration */
  struct ak_unk_pool tasks_processed_at;  /* Timestamp */
  struct ak_unk_pool tasks_fetched_at;  /* Timestamp */
};
/* Decision 11: `ListTaskSummaryResponse`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_ListTaskSummaryResponse_opts {
  void *host;
  struct ak_unk_opts self;  /* ListTaskSummaryResponse */
  struct ak_unk_pool tasks;  /* TaskSummary */
  struct ak_unk_pool tasks_options;  /* TaskOptions */
  struct ak_unk_pool tasks_options_options;  /* TaskOptionsOptionsEntry */
  struct ak_unk_pool tasks_options_max_duration;  /* Duration */
  struct ak_unk_pool tasks_created_at;  /* Timestamp */
};
/* Decision 11: `ListProbeResponse`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_ListProbeResponse_opts {
  void *host;
  struct ak_unk_opts self;  /* ListProbeResponse */
  struct ak_unk_pool probes;  /* Probe */
  struct ak_unk_pool probes_body;  /* oneof */
};
/* Decision 11: `ListMetricsResponse`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_ListMetricsResponse_opts {
  void *host;
  struct ak_unk_opts self;  /* ListMetricsResponse */
  struct ak_unk_pool batches;  /* MetricsBatch */
};
/* Decision 11: `UploadResultDataMessage`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_UploadResultDataMessage_opts {
  void *host;
  struct ak_unk_opts self;  /* UploadResultDataMessage */
  struct ak_unk_opts upload;  /* UploadResultData */
};
/* Decision 11: `DualResponse`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_DualResponse_opts {
  void *host;
  struct ak_unk_opts self;  /* DualResponse */
  struct ak_unk_pool left;  /* Pair */
  struct ak_unk_pool right;  /* Pair */
};
/* Decision 11: `ChunkLeaf`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_ChunkLeaf_opts {
  void *host;
  struct ak_unk_opts self;  /* ChunkLeaf */
};
/* Decision 11: `ChunkInner`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_ChunkInner_opts {
  void *host;
  struct ak_unk_opts self;  /* ChunkInner */
  struct ak_unk_pool leaves;  /* ChunkLeaf */
};
/* Decision 11: `ChunkElement`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_ChunkElement_opts {
  void *host;
  struct ak_unk_opts self;  /* ChunkElement */
  struct ak_unk_pool attrs;  /* ChunkElementAttrsEntry */
  struct ak_unk_opts inner;  /* ChunkInner */
  struct ak_unk_pool inner_leaves;  /* ChunkLeaf */
};
/* Decision 11: `ChunkedResponse`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_ChunkedResponse_opts {
  void *host;
  struct ak_unk_opts self;  /* ChunkedResponse */
  struct ak_unk_pool items;  /* ChunkElement */
  struct ak_unk_pool items_attrs;  /* ChunkElementAttrsEntry */
  struct ak_unk_pool items_inner;  /* ChunkInner */
  struct ak_unk_pool items_inner_leaves;  /* ChunkLeaf */
};
/* Decision 11: `ChunkedResponseWide`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_ChunkedResponseWide_opts {
  void *host;
  struct ak_unk_opts self;  /* ChunkedResponseWide */
  struct ak_unk_pool items;  /* ChunkElement */
  struct ak_unk_pool items_attrs;  /* ChunkElementAttrsEntry */
  struct ak_unk_pool items_inner;  /* ChunkInner */
  struct ak_unk_pool items_inner_leaves;  /* ChunkLeaf */
};
/* Decision 11: `LeafElement`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_LeafElement_opts {
  void *host;
  struct ak_unk_opts self;  /* LeafElement */
  struct ak_unk_opts stamp;  /* Timestamp */
};
/* Decision 11: `LeafResponse`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_LeafResponse_opts {
  void *host;
  struct ak_unk_opts self;  /* LeafResponse */
  struct ak_unk_pool items;  /* LeafElement */
  struct ak_unk_pool items_stamp;  /* Timestamp */
};
/* Decision 11: `Surrogate`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_Surrogate_opts {
  void *host;
  struct ak_unk_opts self;  /* Surrogate */
  struct ak_unk_opts nested;  /* SurrogateInner */
  struct ak_unk_pool attrs;  /* SurrogateAttrsEntry */
};
/* Decision 11: `SurrogateInner`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_SurrogateInner_opts {
  void *host;
  struct ak_unk_opts self;  /* SurrogateInner */
};
/* Decision 11: `WireZoo`'s unknown-field options, one entry per message position
 * (plan.unk_positions order), read IN PLACE by the core; a repeated position is a
 * pool (rule 1); `host` is passed to every grow as `sink`. */
struct ak_dec_WireZoo_opts {
  void *host;
  struct ak_unk_opts self;  /* WireZoo */
  struct ak_unk_opts v_msg;  /* Timestamp */
};
/* ---- the fixed entry points (plan.FIXED.functions) ----------------------------- */
/* lifecycle */
/* Once per process, before anything else (plan.lifecycle). */
int32_t ak_init(const struct ak_init_opts *opts, struct ak_err *err);