ffi/poc/csharp/src/Corpus/Generated/Abi.cs


/// Decision 11: Empty's unknown-field configuration, read IN PLACE by the core from the
/// reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_Empty_opts
{
    public IntPtr host;
    public ak_unk_opts self;
}

/// Decision 11: UploadResultData's unknown-field configuration, read IN PLACE by the
/// core from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_UploadResultData_opts
{
    public IntPtr host;
    public ak_unk_opts self;
}

/// Decision 11: MetricsBatch's unknown-field configuration, read IN PLACE by the core
/// from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_MetricsBatch_opts
{
    public IntPtr host;
    public ak_unk_opts self;
}

/// Decision 11: Pair's unknown-field configuration, read IN PLACE by the core from the
/// reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_Pair_opts
{
    public IntPtr host;
    public ak_unk_opts self;
}

/// Decision 11: ListResultsResponse's unknown-field configuration, read IN PLACE by the
/// core from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_ListResultsResponse_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_pool results;
    public ak_unk_pool results_created_at;
    public ak_unk_pool results_completed_at;
}

/// Decision 11: ListTasksDetailedResponse's unknown-field configuration, read IN PLACE
/// by the core from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_ListTasksDetailedResponse_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_pool tasks;
    public ak_unk_pool tasks_options;
    public ak_unk_pool tasks_options_options;
    public ak_unk_pool tasks_options_max_duration;
    public ak_unk_pool tasks_created_at;
    public ak_unk_pool tasks_submitted_at;
    public ak_unk_pool tasks_started_at;
    public ak_unk_pool tasks_ended_at;
    public ak_unk_pool tasks_pod_ttl;
    public ak_unk_pool tasks_output;
    public ak_unk_pool tasks_received_at;
    public ak_unk_pool tasks_acquired_at;
    public ak_unk_pool tasks_creation_to_end_duration;
    public ak_unk_pool tasks_processing_to_end_duration;
    public ak_unk_pool tasks_received_to_end_duration;
    public ak_unk_pool tasks_processed_at;
    public ak_unk_pool tasks_fetched_at;
}

/// Decision 11: ListTaskSummaryResponse's unknown-field configuration, read IN PLACE by
/// the core from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_ListTaskSummaryResponse_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_pool tasks;
    public ak_unk_pool tasks_options;
    public ak_unk_pool tasks_options_options;
    public ak_unk_pool tasks_options_max_duration;
    public ak_unk_pool tasks_created_at;
}

/// Decision 11: ListProbeResponse's unknown-field configuration, read IN PLACE by the
/// core from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_ListProbeResponse_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_pool probes;
    public ak_unk_pool probes_body;
}

/// Decision 11: ListMetricsResponse's unknown-field configuration, read IN PLACE by the
/// core from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_ListMetricsResponse_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_pool batches;
}

/// Decision 11: UploadResultDataMessage's unknown-field configuration, read IN PLACE by
/// the core from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_UploadResultDataMessage_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_opts upload;
}

/// Decision 11: DualResponse's unknown-field configuration, read IN PLACE by the core
/// from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_DualResponse_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_pool left;
    public ak_unk_pool right;
}

/// Decision 11: ChunkLeaf's unknown-field configuration, read IN PLACE by the core from
/// the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_ChunkLeaf_opts
{
    public IntPtr host;
    public ak_unk_opts self;
}

/// Decision 11: ChunkInner's unknown-field configuration, read IN PLACE by the core
/// from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_ChunkInner_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_pool leaves;
}

/// Decision 11: ChunkElement's unknown-field configuration, read IN PLACE by the core
/// from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_ChunkElement_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_pool attrs;
    public ak_unk_opts inner;
    public ak_unk_pool inner_leaves;
}

/// Decision 11: ChunkedResponse's unknown-field configuration, read IN PLACE by the
/// core from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_ChunkedResponse_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_pool items;
    public ak_unk_pool items_attrs;
    public ak_unk_pool items_inner;
    public ak_unk_pool items_inner_leaves;
}

/// Decision 11: ChunkedResponseWide's unknown-field configuration, read IN PLACE by the
/// core from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_ChunkedResponseWide_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_pool items;
    public ak_unk_pool items_attrs;
    public ak_unk_pool items_inner;
    public ak_unk_pool items_inner_leaves;
}

/// Decision 11: LeafElement's unknown-field configuration, read IN PLACE by the core
/// from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_LeafElement_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_opts stamp;
}

/// Decision 11: LeafResponse's unknown-field configuration, read IN PLACE by the core
/// from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_LeafResponse_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_pool items;
    public ak_unk_pool items_stamp;
}

/// Decision 11: Surrogate's unknown-field configuration, read IN PLACE by the core from
/// the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_Surrogate_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_opts nested;
    public ak_unk_pool attrs;
}

/// Decision 11: SurrogateInner's unknown-field configuration, read IN PLACE by the core
/// from the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_SurrogateInner_opts
{
    public IntPtr host;
    public ak_unk_opts self;
}

/// Decision 11: WireZoo's unknown-field configuration, read IN PLACE by the core from
/// the reset that arms it until the next reset (plan.unk_opts_layout).
[StructLayout(LayoutKind.Sequential)]
public struct ak_dec_WireZoo_opts
{
    public IntPtr host;
    public ak_unk_opts self;
    public ak_unk_opts v_msg;
}

/// ABI v1 section 6: plain exports, declared per symbol, so a missing one is a load
/// failure. Every declaration carries both language levels.
public static unsafe partial class Abi
{
    public const string Lib = "ak_core";

    /// R-G7: every entry point below requires `ak_init`. The static constructor runs
    /// before the first call to ANY of them, so no path reaches the core uninitialised.
    static Abi() { AbiInit.Run(); }

    public const uint AK_ABI_VERSION = 1u;
    public const int AK_OK = 0;
    public const int AK_ALREADY_INITIALIZED = 1;
    public const int AK_ERR_HOST = -1;
    public const int AK_ERR_MALFORMED = -2;
    public const int AK_ERR_TRUNCATED = -3;
    public const int AK_ERR_DEPTH = -4;
    public const int AK_ERR_LIMIT = -5;
    public const int AK_ERR_TRANSCODE = -6;
    public const int AK_ERR_CAPACITY = -7;
    public const int AK_ERR_INVALID_STATE = -8;
    public const int AK_ERR_PANIC = -9;
    public const int AK_ERR_UNINITIALIZED = -10;
    public const int AK_ERR_ABI = -11;
    public const uint AK_INIT_OWN_LOGGING = 1u;
    public const uint AK_INIT_NO_PANIC_HOOK = 2u;
    public const uint AK_INIT_NO_CRYPTO = 4u;
    public const long AK_TOKEN_ROOT = -1;
    /// ABI v1 section 8's direct-argument sentinel (`AK_STR_DIRECT`).
    public static readonly IntPtr AK_STR_DIRECT = (IntPtr)1;
